data/derived/comb/progs/unify/prog8651.ml.out
Characters 326-330:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type (int * int) list
       but an expression was expected of type (int * int) list list
       Type int * int is not compatible with type (int * int) list 
